change config.toml update baseUrl

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.bmpi.dev"
+baseURL = "https://suspicious-kalam-89bb6a.netlify.app/"
 title = "Just So So"
 theme = "hugo-coder"
 languagecode = "zh-cn"
